tests/typing/fail/type-mismatch-06.stderr
error: type mismatch: left has type `unit`, right has type `int`
  --> tests/typing/fail/type-mismatch-06.rs:12:14
   |
12 |         () = f();
   |              ^^^
